--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,14 +7,99 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <a href="index.html" lang="en"><span>Web</span>Studio</a>
 
-    <section></section>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      </address>
+    </header>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <!--Прихований заголовок (Репета у відео сказав що можна)-->
+        <h2>Особливості</h2>
+        <ul>
+          <li>
+            <h3>Увага до деталей</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>Планування</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <section></section>
-
-    <section></section>
-
-    <footer></footer>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <img src="images/img1.jpg" alt="пишемо код" />
+        <img src="images/img2.jpg" alt="тестємо на пристроях" />
+        <img src="images/img3.jpg" alt="розробляємо дизайн" />
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="images/photo1.jpg" alt="Ігор Дем'яненко" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/photo2.jpg" alt="Ольга Рєпіна" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/photo3.jpg" alt="Микола Тарасов" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/photo4.jpg" alt="Михайло Єрмаков" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html"><span>Web</span>Studio</a>
+      <address>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      </address>
+    </footer>
   </body>
 </html>
