index file has been edited as required

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-      </address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -63,30 +63,46 @@
 
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="images/img1.jpg" alt="пишемо код" />
-        <img src="images/img2.jpg" alt="тестємо на пристроях" />
-        <img src="images/img3.jpg" alt="розробляємо дизайн" />
+        <img src="images/img1.jpg" alt="пишемо код" width="370px" />
+        <img src="images/img2.jpg" alt="тестємо на пристроях" width="370px" />
+        <img src="images/img3.jpg" alt="розробляємо дизайн" width="370px" />
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="images/photo1.jpg" alt="Ігор Дем'яненко" />
+            <img
+              src="images/photo1.jpg"
+              alt="усміхнений чоловік в окулярах та з бородою"
+              width="270px"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/photo2.jpg" alt="Ольга Рєпіна" />
+            <img
+              src="images/photo2.jpg"
+              alt="усміхнена дівчина в окулярах зі світлим волоссям"
+              width="270px"
+            />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/photo3.jpg" alt="Микола Тарасов" />
+            <img
+              src="images/photo3.jpg"
+              alt="усміхнений чоловік з поглядом у бік"
+              width="270px"
+            />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/photo4.jpg" alt="Михайло Єрмаков" />
+            <img
+              src="images/photo4.jpg"
+              alt="усміхнений чоловік в окулярах та з бородою"
+              width="270px"
+            />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -97,8 +113,10 @@
       <a href="index.html"><span>Web</span>Studio</a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
