--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="images/img1.jpg" alt="пишемо код" width="370px" />
-        <img src="images/img2.jpg" alt="тестємо на пристроях" width="370px" />
-        <img src="images/img3.jpg" alt="розробляємо дизайн" width="370px" />
+        <img src="images/img1.jpg" alt="пишемо код" width="370" />
+        <img src="images/img2.jpg" alt="тестємо на пристроях" width="370" />
+        <img src="images/img3.jpg" alt="розробляємо дизайн" width="370" />
       </section>
       <section>
         <h2>Наша команда</h2>
@@ -74,7 +74,7 @@
             <img
               src="images/photo1.jpg"
               alt="усміхнений чоловік в окулярах та з бородою"
-              width="270px"
+              width="270"
             />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
@@ -83,7 +83,7 @@
             <img
               src="images/photo2.jpg"
               alt="усміхнена дівчина в окулярах зі світлим волоссям"
-              width="270px"
+              width="270"
             />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
@@ -92,7 +92,7 @@
             <img
               src="images/photo3.jpg"
               alt="усміхнений чоловік з поглядом у бік"
-              width="270px"
+              width="270"
             />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
@@ -101,7 +101,7 @@
             <img
               src="images/photo4.jpg"
               alt="усміхнений чоловік в окулярах та з бородою"
-              width="270px"
+              width="270"
             />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
