fixed validation error (phone link)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -63,16 +63,16 @@
 
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="images/img1.jpg" alt="пишемо код" width="370" />
-        <img src="images/img2.jpg" alt="тестємо на пристроях" width="370" />
-        <img src="images/img3.jpg" alt="розробляємо дизайн" width="370" />
+        <img src="./images/img1.jpg" alt="пишемо код" width="370" />
+        <img src="./images/img2.jpg" alt="тестємо на пристроях" width="370" />
+        <img src="./images/img3.jpg" alt="розробляємо дизайн" width="370" />
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img
-              src="images/photo1.jpg"
+              src="./images/photo1.jpg"
               alt="усміхнений чоловік в окулярах та з бородою"
               width="270"
             />
@@ -81,7 +81,7 @@
           </li>
           <li>
             <img
-              src="images/photo2.jpg"
+              src="./images/photo2.jpg"
               alt="усміхнена дівчина в окулярах зі світлим волоссям"
               width="270"
             />
@@ -90,7 +90,7 @@
           </li>
           <li>
             <img
-              src="images/photo3.jpg"
+              src="./images/photo3.jpg"
               alt="усміхнений чоловік з поглядом у бік"
               width="270"
             />
@@ -99,7 +99,7 @@
           </li>
           <li>
             <img
-              src="images/photo4.jpg"
+              src="./images/photo4.jpg"
               alt="усміхнений чоловік в окулярах та з бородою"
               width="270"
             />
@@ -115,7 +115,7 @@
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
