--- a/index.html
+++ b/index.html
@@ -63,9 +63,19 @@
 
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="./images/img1.jpg" alt="пишемо код" width="370" />
-        <img src="./images/img2.jpg" alt="тестємо на пристроях" width="370" />
-        <img src="./images/img3.jpg" alt="розробляємо дизайн" width="370" />
+        <ul>
+          <li><img src="./images/img1.jpg" alt="пишемо код" width="370" /></li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="тестємо на пристроях"
+              width="370"
+            />
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="розробляємо дизайн" width="370" />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
